# chess-project

./: .gitignore  CMakeLists.txt  README.md
chess-project/: CMakeLists.txt  board-renderer.c  board-renderer.h  chess-project.c  chess-project.h  chessProject.c  debugmalloc.h  global.c  global.h  move-eval.c  move-eval.h  svg-loader.c  svg-loader.h  text-renderer.c  text-renderer.h
chess-project/ai/: chess-bot.c  chess-bot.h  chessBot.c  chessBot.h  moveOrdering.c  moveOrdering.h  transpositionTable.c  transpositionTable.h
chess-project/core/: board.c  board.h  gameState.c  gameState.h  move.c  move.h  piece.c  piece.h  pieceList.c  pieceList.h
chess-project/game/: gameHandler.c  gameHandler.h  notations.c  notations.h  pgn.c  pgn.h
chess-project/graphics/: board-renderer.c  board-renderer.h  boardRenderer.c  boardRenderer.h  layout.c  layout.h  svg-loader.c  svg-loader.h  svgLoader.c  svgLoader.h  text-renderer.c  text-renderer.h  textRenderer.c  textRenderer.h
chess-project/logic/: evaluator.c  evaluator.h  game-handler.c  game-handler.h  move-eval.c  move-eval.h  piece-maps.c  piece-maps.h  pieceMaps.c  pieceMaps.h  rules.c  rules.h
chess-project/moveGeneration/: moveGenerator.c  moveGenerator.h  precompution.c  precompution.h
chess-project/zobrist/: randomGenerator.c  randomGenerator.h  zobristHashing.c  zobristHashing.h
